tests/suite/snapshots/suite__check__tests__check__bad_final_1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 34
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_final_1.xi:3:17]
   │
 1 │ final class A {}
   ·             ┬  
   ·             ╰── Class defined here
   · 
 3 │ class B extends A {}
   ·                 ┬  
   ·                 ╰── Class A is declared final and cannot be extended
───╯

